added bunch of shit

--- a/less/colors.less
+++ b/less/colors.less
@@ -5,26 +5,24 @@
 }
 
 .black {
-    .color;
+    color: @white;
     background: @black;
 }
 
 .white {
-    .color;
+    color: @black;
     background: @white;
+}
+
+.grey {
+    .color;
+    background: @grey;
 }
 
 .red {
     .color;
     background: @red;
 }
-
-.pastelred {
-    .color;
-    background: @pastelred;
-}
-
-
 
 .orange {
     .color;
