--- a/less/variables.less
+++ b/less/variables.less
@@ -2,9 +2,7 @@
 
 @black: #000000;
 @white: #eeeeee;
-
 @grey: #989f8f;
-
 @red: #d43e36;
 @orange: #f99927;
 @yellow: #efc200;
@@ -14,19 +12,18 @@
 @purple: #9c71b7;
 @pink: #e283ad;
 
-// They're here if I ever need them, probably for :hover or some shit
-@pastelred: #df6565;
-@pastelorange: #ed9e56;
-@pastelyellow: #ecce58;
-@pastelgreen: #c5d15c;
-@pastelcyan: #80cabf;
-@pastelblue: #8cb6e1;
-@pastelpurple: #cfabdf;
-@pastelpink: #fbace0;
+// They're here if I ever need them, probably for :hover or some shit.
+@pastel-red: #df6565;
+@pastel-orange: #ed9e56;
+@pastel-yellow: #ecce58;
+@pastel-green: #c5d15c;
+@pastel-cyan: #80cabf;
+@pastel-blue: #8cb6e1;
+@pastel-purple: #cfabdf;
+@pastel-pink: #ff94bd;
 
 @foreground: @white;
 @background: @black;
-
 @primary-color: @red;
 @accent-color: @cyan;
 @disabled-color: @grey;
