--- a/css/mnml.css
+++ b/css/mnml.css
@@ -5,16 +5,16 @@
   background: #000000;
 }
 .white {
-  color: #eeeeee;
+  color: #000000;
   background: #eeeeee;
+}
+.grey {
+  color: #eeeeee;
+  background: #989f8f;
 }
 .red {
   color: #eeeeee;
   background: #d43e36;
-}
-.pastelred {
-  color: #eeeeee;
-  background: #df6565;
 }
 .orange {
   color: #eeeeee;
@@ -44,11 +44,19 @@
   color: #eeeeee;
   background: #e283ad;
 }
-@font-face {
-  font-family: 'Lobster';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v20/neILzCirqoswsqX9zoKmNg.ttf) format('truetype');
+.clearfix:after {
+  clear: both;
+  content: ' ';
+  display: table;
+}
+.float-left {
+  float: left;
+}
+.float-right {
+  float: right;
+}
+.center {
+  text-align: center;
 }
 /* resets */
 *,
@@ -85,28 +93,37 @@
 .row:last-child {
   margin-bottom: 0;
 }
-[class*="col-"] {
+.column,
+.spacer {
   overflow-wrap: break-word;
   padding: 10px;
   width: 100%;
 }
 @media all and (min-width: 600px) {
-  /* set col widths */
-  .col-2-3 {
-    width: 66.66%;
-  }
-  .col-1-2 {
-    width: 50%;
-  }
-  .col-1-3 {
-    width: 33.33%;
-  }
-  .col-1-4 {
+  .column.quarter,
+  .spacer.quarter {
     width: 25%;
   }
-  .col-1-8 {
-    width: 12.5%;
+  .column.one-third,
+  .spacer.one-third {
+    width: 33.33%;
   }
+  .column.half,
+  .spacer.half {
+    width: 50%;
+  }
+  .column.two-thirds,
+  .spacer.two-thirds {
+    width: 66.66%;
+  }
+  .column.three-quarters,
+  .spacer.three-quarters {
+    width: 75%;
+  }
+}
+.spacer {
+  color: #000000;
+  background: #000000;
 }
 html {
   box-sizing: border-box;
@@ -119,4 +136,81 @@ body {
   font-weight: 300;
   letter-spacing: .01em;
   line-height: 1.6;
+}
+a {
+  color: #4ba8af;
+  text-decoration: none;
+}
+a:hover {
+  font-weight: bold;
+}
+b,
+strong {
+  font-weight: bold;
+}
+p {
+  margin-top: 0;
+}
+li {
+  margin-bottom: 1.0rem;
+}
+ol ol,
+ol ul,
+ul ol,
+ul ul {
+  font-size: 90%;
+  margin: 1.5rem 0 1.5rem 3.0rem;
+}
+ol {
+  list-style: decimal inside;
+}
+ul {
+  list-style: circle inside;
+}
+hr {
+  border: 0;
+  border-top: 0.1rem solid #eeeeee;
+  margin: 3.0rem 0;
+}
+h1 {
+  font-weight: 300;
+  letter-spacing: -0.1rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0;
+  font-size: 4.6rem;
+  line-height: 1.2;
+}
+h2 {
+  font-weight: 300;
+  letter-spacing: -0.1rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0;
+  font-size: 3.6rem;
+  line-height: 1.25;
+}
+h3 {
+  font-weight: 300;
+  letter-spacing: -0.1rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0;
+  font-size: 2.8rem;
+  line-height: 1.3;
+}
+h4 {
+  font-weight: 300;
+  letter-spacing: -0.1rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0;
+  font-size: 2.2rem;
+  letter-spacing: -0.08rem;
+  line-height: 1.35;
+}
+h5 {
+  font-weight: 300;
+  letter-spacing: -0.1rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0;
+  font-size: 1.8rem;
+  letter-spacing: -0.05rem;
+  line-height: 1.5;
 }
