--- a/less/elements.less
+++ b/less/elements.less
@@ -11,3 +11,90 @@ body {
     letter-spacing: .01em;
     line-height: 1.6;
 }
+
+.bold () {
+    font-weight: bold;
+}
+
+a {
+    color: @accent-color;
+    text-decoration: none;
+    &:hover {
+        .bold;
+    }
+}
+
+b,
+strong {
+    .bold;
+}
+
+p {
+    margin-top: 0;
+}
+
+
+li {
+  margin-bottom: 1.0rem;
+}
+
+ol ol,
+ol ul,
+ul ol,
+ul ul {
+  font-size: 90%;
+  margin: 1.5rem 0 1.5rem 3.0rem;
+}
+
+ol {
+  list-style: decimal inside;
+}
+
+ul {
+  list-style: circle inside;
+}
+
+hr {
+  border: 0;
+  border-top: 0.1rem solid @foreground;
+  margin: 3.0rem 0;
+}
+
+.header() {
+    font-weight: 300;
+    letter-spacing: -.1rem;
+    margin-bottom: 2.0rem;
+    margin-top: 0;
+}
+
+h1 {
+    .header;
+    font-size: 4.6rem;
+    line-height: 1.2;
+}
+
+h2 {
+    .header;
+    font-size: 3.6rem;
+    line-height: 1.25;
+}
+
+h3 {
+    .header;
+    font-size: 2.8rem;
+    line-height: 1.3;
+}
+
+h4 {
+    .header;
+    font-size: 2.2rem;
+    letter-spacing: -.08rem;
+    line-height: 1.35;
+}
+
+h5 {
+    .header;
+    font-size: 1.8rem;
+    letter-spacing: -.05rem;
+    line-height: 1.5;
+}
