--- a/less/grid.less
+++ b/less/grid.less
@@ -1,6 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster);
-
-
 /* resets */
 
 *,
@@ -14,7 +11,6 @@
     display: table;
     clear: both;
 }
-
 
 /* global */
 
@@ -33,7 +29,6 @@
     width: 100%;
 }
 
-
 /* grid */
 
 .row {
@@ -47,28 +42,31 @@
     margin-bottom: 0;
 }
 
-[class*="col-"] {
+.column,
+.spacer {
     overflow-wrap: break-word;
     padding: 10px;
     width: 100%;
+    @media all and ( min-width: 600px) {
+        &.quarter {
+            width: 25%;
+        }
+        &.one-third {
+            width: 33.33%;
+        }
+        &.half {
+            width: 50%;
+        }
+        &.two-thirds {
+            width: 66.66%;
+        }
+        &.three-quarters {
+            width: 75%;
+        }
+    }
 }
 
-@media all and ( min-width: 600px) {
-
-    /* set col widths */
-    .col-2-3 {
-        width: 66.66%;
-    }
-    .col-1-2 {
-        width: 50%;
-    }
-    .col-1-3 {
-        width: 33.33%;
-    }
-    .col-1-4 {
-        width: 25%;
-    }
-    .col-1-8 {
-        width: 12.5%;
-    }
+.spacer {
+    color: @background;
+    background: @background;
 }
