--- a/less/helpers.less
+++ b/less/helpers.less
@@ -4,14 +4,22 @@
     display: table;
 }
 
-.float-left {
+.left-align {
     float: left;
 }
 
-.float-right {
+.right-align {
     float: right;
 }
 
-.center {
+.center-align {
+    display: flex;
+    justify-content: center;
     text-align: center;
+}
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
