--- a/less/elements.less
+++ b/less/elements.less
@@ -6,7 +6,7 @@ body {
     color: @foreground;
     background: @background;
     font-family: 'Roboto';
-    font-size: 1.6em;
+    font-size: 1.6rem;
     font-weight: 300;
     letter-spacing: .01em;
     line-height: 1.6;
@@ -38,6 +38,10 @@ li {
   margin-bottom: 1.0rem;
 }
 
+ul, ol {
+    padding-left: 0;;
+}
+
 ol ol,
 ol ul,
 ul ol,
@@ -48,6 +52,7 @@ ul ul {
 
 ol {
   list-style: decimal inside;
+  list-style-type: upper-roman;
 }
 
 ul {
