--- a/less/variables.less
+++ b/less/variables.less
@@ -1,29 +1,27 @@
 /* COLORS */
-
-@black: #000000;
-@white: #eeeeee;
-@grey: #989f8f;
-@red: #d43e36;
-@orange: #f99927;
-@yellow: #efc200;
-@green: #839b00;
-@cyan: #4ba8af;
-@blue: #5286bc;
-@purple: #9c71b7;
-@pink: #e283ad;
-
-// They're here if I ever need them, probably for :hover or some shit.
-@pastel-red: #df6565;
-@pastel-orange: #ed9e56;
-@pastel-yellow: #ecce58;
-@pastel-green: #c5d15c;
-@pastel-cyan: #80cabf;
-@pastel-blue: #8cb6e1;
-@pastel-purple: #cfabdf;
-@pastel-pink: #ff94bd;
-
 @foreground: @white;
 @background: @black;
 @primary-color: @red;
 @accent-color: @cyan;
 @disabled-color: @grey;
+
+/* MIXINS */
+@transition-time: .6667s;
+
+/* HELPERS */
+// Nothing to see here, move along
+
+/* GRID */
+@wrapper-padding: 0 2.0rem;
+@wrapper-width: 95%;
+@container-width: 112.0rem;
+@container-padding: 0 2.0rem;
+@row-margin: 0 -1.0rem;
+@column-padding: 1.0rem;
+
+/* ELEMENTS */
+@font-family: 'Roboto';
+@font-size: 1.6rem;
+@font-weight: 300;
+@font-tracking: .01em;
+@line-height: 1.6;
