--- a/less/mnml.less
+++ b/less/mnml.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "colors.less";
+@import "mixins.less";
 @import "helpers.less";
 @import "grid.less";
 @import "elements.less";
