--- a/less/elements.less
+++ b/less/elements.less
@@ -18,11 +18,11 @@ body {
 }
 
 a {
-    color: @white;
+    color: @foreground;
     text-decoration: none;
     padding: 0 .8rem;
     .bold;
-    .slide-up(@blue, 10%);
+    .slide-up(@blue, 10%, @white);
 }
 
 b,
