--- a/less/variables.less
+++ b/less/variables.less
@@ -1,12 +1,12 @@
 /* COLORS */
-@foreground: @white;
-@background: @black;
+@foreground: @black;
+@background: @white;
 @primary-color: @red;
 @accent-color: @cyan;
 @disabled-color: @grey;
 
 /* MIXINS */
-@transition-time: .6667s;
+@transition-time: .3333s;
 
 /* HELPERS */
 // Nothing to see here, move along
