--- a/less/colors.less
+++ b/less/colors.less
@@ -1,13 +1,13 @@
 @black: #000000;
-@white: #ffffff;
+@white: #fefefe;
 @grey: #989f8f;
-@red: #d43e36;
+@red: #f15a4f;
 @orange: #f99927;
 @yellow: #ffc60a;
-@green: #839b00;
-@cyan: #4ba8af;
+@green: #6ac17c;
+@cyan: #00b6b4;
 @blue: #5286bc;
-@purple: #9c71b7;
+@purple: #956cae;
 @pink: #e283ad;
 
 @clear: rgba(0,0,0,0);
@@ -45,6 +45,7 @@
 }
 
 .yellow {
+    color: @black !important;
     .color(@yellow);
 }
 
