--- a/less/colors.less
+++ b/less/colors.less
@@ -22,6 +22,11 @@
 @pastel-purple: #cfabdf;
 @pastel-pink: #ff94bd;
 
+.inverse {
+    background: @foreground;
+    color: @background;
+}
+
 .black {
     background: @black;
     color: @white;
