--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 /* COLORS */
-@foreground: @black;
-@background: @white;
-@primary-color: @red;
+@foreground: @white;
+@background: @black;
+@primary-color: @yellow;
 @accent-color: @cyan;
 @disabled-color: @grey;
 
@@ -16,7 +16,7 @@
 @wrapper-width: 95%;
 @container-width: 112.0rem;
 @container-padding: 0 2.0rem;
-@row-margin: 0 -1.0rem;
+@row-margin: 0;
 @column-padding: 1.0rem;
 
 /* ELEMENTS */
@@ -25,3 +25,4 @@
 @font-weight: 300;
 @font-tracking: .01em;
 @line-height: 1.6;
+@border-radius: 0; //.4rem
