--- a/css/mnml.css
+++ b/css/mnml.css
@@ -3,6 +3,10 @@
 /* HELPERS */
 /* GRID */
 /* ELEMENTS */
+.inverse {
+  background: #fefefe;
+  color: #000000;
+}
 .black {
   background: #000000;
   color: #fefefe;
@@ -133,6 +137,11 @@
   position: fixed;
   width: 100%;
 }
+@media only screen and (max-width: 1560px) {
+  .navigation {
+    background-color: #000000;
+  }
+}
 .navigation .container {
   padding-bottom: 0;
   padding-top: 0;
@@ -140,12 +149,7 @@
 .navigation .navigation-list {
   list-style: none;
   margin-bottom: 0;
-  margin-right: 5rem;
-}
-@media (min-width: 80rem) {
-  .navigation .navigation-list {
-    margin-right: 0;
-  }
+  float: right;
 }
 .navigation .navigation-item {
   float: left;
@@ -153,14 +157,15 @@
   margin-left: 2.5rem;
   padding: .2rem .4rem;
   position: relative;
+  border-radius: 0;
   background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, #fefefe 50%, #f15a4f 50%);
+  background-image: linear-gradient(to bottom, #000000 50%, #fefefe 50%);
   background-position: 0 5%;
   transition: all 0.3333s;
 }
 .navigation .navigation-item:hover {
   background-position: 0 100%;
-  color: #fefefe;
+  color: #000000;
 }
 .navigation .navigation-title {
   position: relative;
@@ -169,20 +174,21 @@
   line-height: 5.2rem;
   padding: .2rem .4rem;
   text-decoration: none;
+  border-radius: 0;
   background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, #fefefe 50%, #000000 50%);
+  background-image: linear-gradient(to bottom, #000000 50%, #fefefe 50%);
   background-position: 0 5%;
   transition: all 0.3333s;
 }
 .navigation .navigation-title:hover {
   background-position: 0 100%;
-  color: #fefefe;
+  color: #000000;
 }
 .row {
   display: flex;
   flex-flow: row wrap;
-  margin: 0 -1rem;
-  margin-bottom: 1.0rem;
+  margin: 0;
+  margin-bottom: .8rem;
 }
 .row:last-child {
   margin-bottom: 0;
@@ -193,6 +199,7 @@
   padding: 1rem;
   margin-bottom: 0;
   width: 100%;
+  border-radius: 0;
 }
 @media all and (min-width: 600px) {
   .column.quarter,
@@ -217,16 +224,16 @@
   }
 }
 .spacer {
-  color: #fefefe;
-  background: #fefefe;
+  color: #000000;
+  background: #000000;
 }
 html {
   box-sizing: border-box;
 }
 body {
-  padding-top: 5.8rem;
-  color: #000000;
-  background: #fefefe;
+  padding-top: 5.4rem;
+  color: #fefefe;
+  background: #000000;
   font-family: 'Roboto';
   font-size: 1.6rem;
   font-weight: 300;
@@ -234,17 +241,18 @@ body {
   line-height: 1.6;
 }
 a {
-  color: #000000;
+  color: #fefefe;
   text-decoration: none;
   padding: 0 .8rem;
-  font-weight: bold;
-  background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, #fefefe 50%, #5286bc 50%);
-  background-position: 0 10%;
+  border-radius: 0;
+  font-weight: 700;
+  background-size: 200% 100%;
+  background-image: linear-gradient(to right, #000000 50%, #5286bc 50%);
+  background-position: -5% 0;
   transition: all 0.3333s;
 }
 a:hover {
-  background-position: 0 100%;
+  background-position: -100% 0;
   color: #fefefe;
 }
 b,
@@ -277,7 +285,7 @@ ul {
 }
 hr {
   border: 0;
-  border-top: 0.1rem solid #000000;
+  border-top: 0.1rem solid #fefefe;
   margin: 3.0rem 0;
 }
 h1 {
@@ -321,4 +329,28 @@ h5 {
   font-size: 1.8rem;
   letter-spacing: -0.05rem;
   line-height: 1.5;
+}
+.button {
+  display: inline;
+  border-radius: 0;
+  color: #fefefe;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: .1rem;
+  line-height: 3.8rem;
+  padding: 0 3.0rem;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, #000000 50%, #ffc60a 50%);
+  background-position: 0 5%;
+  transition: all 0.3333s;
+}
+.button:hover {
+  background-position: 0 100%;
+  color: #00b6b4;
 }
