--- a/less/grid.less
+++ b/less/grid.less
@@ -47,6 +47,12 @@
     width: 100%;
 }
 
+@media only screen and (max-width: 1560px) {
+    .navigation {
+        background-color: @background;
+    }
+}
+
 .navigation .container {
     padding-bottom: 0;
     padding-top: 0
@@ -55,13 +61,9 @@
 .navigation .navigation-list {
     list-style: none;
     margin-bottom: 0;
-    margin-right: 5rem
-}
-
-@media(min-width:80rem) {
-    .navigation .navigation-list {
-        margin-right: 0
-    }
+    //border-radius: @border-radius;
+    .right-align;
+    //margin-right: 5rem
 }
 
 .navigation .navigation-item {
@@ -70,7 +72,8 @@
     margin-left: 2.5rem;
     padding: .2rem .4rem;
     position: relative;
-    .slide-up(@red, 5%, @white);
+    border-radius: @border-radius;
+    .slide-up(@foreground, 5%, @background);
 }
 
 .navigation .navigation-title {
@@ -80,14 +83,16 @@
     line-height: 5.2rem;
     padding: .2rem .4rem;
     text-decoration: none;
-    .slide-up(@black, 5%, @white);
+    border-radius: @border-radius;
+    .slide-up(@foreground, 5%, @background);
 }
 
 .row {
     display: flex;
     flex-flow: row wrap;
     margin: @row-margin;
-    margin-bottom: 1.0rem;
+    margin-bottom: .8rem;
+    //border-radius: @border-radius;
 }
 
 .row:last-child {
@@ -100,6 +105,7 @@
     padding: @column-padding;
     margin-bottom: 0;
     width: 100%;
+    border-radius: @border-radius;
     @media all and ( min-width: 600px) {
         &.quarter {
             flex: 0 0 25%;
