--- a/css/mnml.css
+++ b/css/mnml.css
@@ -38,7 +38,7 @@
 }
 .blue {
   color: #fefefe;
-  background: #5286bc;
+  background: #0096d5;
 }
 .cyan {
   color: #fefefe;
@@ -143,44 +143,27 @@
   }
 }
 .navigation .container {
-  padding-bottom: 0;
-  padding-top: 0;
+  max-width: 100% !important;
 }
 .navigation .navigation-list {
   list-style: none;
   margin-bottom: 0;
-  float: right;
 }
 .navigation .navigation-item {
   float: left;
   margin-bottom: 0;
-  margin-left: 2.5rem;
+  font-weight: normal;
   padding: .2rem .4rem;
   position: relative;
-  border-radius: 0;
-  background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, #000000 50%, #fefefe 50%);
-  background-position: 0 5%;
-  transition: all 0.3333s;
-}
-.navigation .navigation-item:hover {
-  background-position: 0 100%;
-  color: #000000;
-}
-.navigation .navigation-title {
-  position: relative;
-  display: inline;
   font-size: 1.6rem;
-  line-height: 5.2rem;
-  padding: .2rem .4rem;
   text-decoration: none;
   border-radius: 0;
   background-size: 100% 200%;
   background-image: linear-gradient(to bottom, #000000 50%, #fefefe 50%);
-  background-position: 0 5%;
+  background-position: 0 0%;
   transition: all 0.3333s;
 }
-.navigation .navigation-title:hover {
+.navigation .navigation-item:hover {
   background-position: 0 100%;
   color: #000000;
 }
@@ -227,6 +210,13 @@
   color: #000000;
   background: #000000;
 }
+.footer {
+  display: block;
+}
+.footer .container {
+  max-width: 80.0rem;
+  font-size: 1.0rem;
+}
 html {
   box-sizing: border-box;
 }
@@ -243,12 +233,12 @@ body {
 a {
   color: #fefefe;
   text-decoration: none;
-  padding: 0 .8rem;
+  padding: 0 .1rem;
   border-radius: 0;
   font-weight: 700;
   background-size: 200% 100%;
-  background-image: linear-gradient(to right, #000000 50%, #5286bc 50%);
-  background-position: -5% 0;
+  background-image: linear-gradient(to right, #000000 50%, #0096d5 50%);
+  background-position: 0% 0;
   transition: all 0.3333s;
 }
 a:hover {
@@ -333,7 +323,7 @@ h5 {
 .button {
   display: inline;
   border-radius: 0;
-  color: #fefefe;
+  color: #ffc60a;
   cursor: pointer;
   display: inline-block;
   font-size: 1.6rem;
@@ -352,5 +342,5 @@ h5 {
 }
 .button:hover {
   background-position: 0 100%;
-  color: #00b6b4;
+  color: #000000;
 }
