--- a/less/variables.less
+++ b/less/variables.less
@@ -13,9 +13,9 @@
 
 /* GRID */
 @wrapper-padding: 0 2.0rem;
-@wrapper-width: 95%;
-@container-width: 112.0rem;
-@container-padding: 0 2.0rem;
+@wrapper-width: 100%;
+@container-width: 80rem;
+@container-padding: 0;
 @row-margin: 0;
 @column-padding: 1.0rem;
 
