--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,9 +3,11 @@
     background: @color;
 }
 
+
+
 .slide-up(@color, @start, @text-color) {
     background-size: 100% 200%;
-    background-image: linear-gradient(to bottom, @background 50%, @color 50%);
+    background-image: linear-gradient(to bottom, @clear 50%, @color 50%);
     background-position: 0 @start;
     transition: all @transition-time;
     &:hover {
@@ -17,7 +19,7 @@
 .slide-down(@color, @start, @text-color) {
     @pos: -1 * @start;
     background-size: 100% 200%;
-    background-image: linear-gradient(to top, @color 50%, @background 50%);
+    background-image: linear-gradient(to top, @color 50%, @clear 50%);
     background-position: 0 @pos;
     transition: all @transition-time;
     &:hover {
@@ -28,7 +30,7 @@
 
 .slide-left(@color, @start, @text-color) {
     background-size: 200% 100%;
-    background-image: linear-gradient(to left, @color 50%, @background 50%);
+    background-image: linear-gradient(to left, @color 50%, @clear 50%);
     background-position: @start 0;
     transition: background-position @transition-time;
     &:hover {
@@ -40,7 +42,7 @@
 .slide-right(@color, @start, @text-color) {
     @pos: -1 * @start;
     background-size: 200% 100%;
-    background-image: linear-gradient(to right, @background 50%, @color 50%);
+    background-image: linear-gradient(to right, @clear 50%, @color 50%);
     background-position: @pos 0;
     transition: all @transition-time;
     &:hover {
