beautiful 2: more beauty

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 /* COLORS */
-@foreground: @white;
-@background: @black;
+@foreground: @black;
+@background: @white;
 @primary-color: @yellow;
 @accent-color: @cyan;
 @disabled-color: @grey;
