--- a/css/mnml.css
+++ b/css/mnml.css
@@ -4,8 +4,8 @@
 /* GRID */
 /* ELEMENTS */
 .inverse {
-  background: #fefefe;
-  color: #000000;
+  background: #000000;
+  color: #fefefe;
 }
 .black {
   background: #000000;
@@ -138,7 +138,7 @@
 }
 @media only screen and (max-width: 1560px) {
   .navigation {
-    background-color: #000000;
+    background-color: #fefefe;
   }
 }
 .navigation .container {
@@ -153,19 +153,19 @@
   float: left;
   margin-bottom: 0;
   font-weight: normal;
-  padding: .2rem .4rem;
+  padding: 0rem .4rem;
   position: relative;
   font-size: 1.6rem;
   text-decoration: none;
   border-radius: 0;
   background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #fefefe 50%);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #000000 50%);
   background-position: 0 0%;
   transition: all 0.3333s;
 }
 .navigation .navigation-item:hover {
   background-position: 0 100%;
-  color: #000000;
+  color: #fefefe;
 }
 .row {
   display: flex;
@@ -207,8 +207,8 @@
   }
 }
 .spacer {
-  color: #000000;
-  background: #000000;
+  color: #fefefe;
+  background: #fefefe;
 }
 .footer {
   display: block;
@@ -222,8 +222,8 @@ html {
 }
 body {
   padding-top: 5.4rem;
-  color: #fefefe;
-  background: #000000;
+  color: #000000;
+  background: #fefefe;
   font-family: 'Roboto';
   font-size: 1.6rem;
   font-weight: 300;
@@ -231,7 +231,7 @@ body {
   line-height: 1.6;
 }
 a {
-  color: #fefefe;
+  color: #000000;
   text-decoration: none;
   padding: 0 .1rem;
   border-radius: 0;
@@ -275,7 +275,7 @@ ul {
 }
 hr {
   border: 0;
-  border-top: 0.1rem solid #fefefe;
+  border-top: 0.1rem solid #000000;
   margin: 3.0rem 0;
 }
 h1 {
