--- a/less/grid.less
+++ b/less/grid.less
@@ -68,7 +68,7 @@
     float: left;
     margin-bottom: 0;
     font-weight: normal;
-    padding: .2rem .4rem;
+    padding: 0rem .4rem;
     position: relative;
     font-size: 1.6rem;
     text-decoration: none;
