--- a/less/elements.less
+++ b/less/elements.less
@@ -22,8 +22,8 @@ a {
     text-decoration: none;
     padding: 0 .1rem;
     border-radius: @border-radius;
-    font-weight: 700;
-    .slide-right(@blue, 0%, @white);
+    font-style: italic;
+    .slide-right(@clear, 2%, @blue);
 }
 
 b,
@@ -108,6 +108,7 @@ h5 {
 
 .button {
   display: inline;
+  border: 0.2rem solid @primary-color;
   border-radius: @border-radius;
   color: @primary-color;
   cursor: pointer;
