--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 /* COLORS */
 @foreground: @black;
 @background: @white;
-@primary-color: @yellow;
+@primary-color: @red;
 @accent-color: @cyan;
 @disabled-color: @grey;
 
