--- a/less/colors.less
+++ b/less/colors.less
@@ -1,26 +1,16 @@
-@black: #000000;
-@white: #fefefe;
+@black: #212121;
+@white: #fafafa;
 @grey: #989f8f;
 @red: #f15a4f;
-@orange: #f99927;
-@yellow: #ffc60a;
-@green: #6ac17c;
-@cyan: #00b6b4;
-@blue: #0096d5;
-@purple: #956cae;
-@pink: #e283ad;
+@orange: #F8A227;
+@yellow: #FECC2F;
+@green: #B2C224;
+@cyan: #6bcfca;
+@blue: #4fa8d8;
+@purple: #ad7cd8;
+@pink: #EE6579;
 
 @clear: rgba(0,0,0,0);
-
-// They're here if I ever need them, probably for :hover or some shit.
-@pastel-red: #df6565;
-@pastel-orange: #ed9e56;
-@pastel-yellow: #ecce58;
-@pastel-green: #c5d15c;
-@pastel-cyan: #80cabf;
-@pastel-blue: #8cb6e1;
-@pastel-purple: #cfabdf;
-@pastel-pink: #ff94bd;
 
 .inverse {
     background: @foreground;
@@ -67,9 +57,5 @@
 }
 
 .purple {
-    .color(@purple);
-}
-
-.pink {
-    .color(@pink);
+    .color(@purple;)
 }
