--- a/less/helpers.less
+++ b/less/helpers.less
@@ -1,52 +1,26 @@
-.clearfix:after {
-    clear: both;
-    content: ' ';
-    display: table;
-}
-
 .left-align {
-    float: left;
-}
-
-.right-align {
-    float: right;
-}
-
-.center-align {
-    display: flex;
-    justify-content: center;
-}
-
-.vertical-align {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.left-justify {
     text-align: left;
 }
 
-.right-justify {
+.right-align {
     text-align: right;
 }
 
-.center-justify {
+.center-align {
     text-align: center;
 }
 
-.left {
-    .left-align;
-    .left-justify;
+.vertical-align {
+    display: flex !important;
+    align-items: center;
+
+    .center-align {
+        align-content: center;
+    }
 }
 
-.right {
-    .right-align;
-    .right-justify;
-}
-
-.center {
-    .vertical-align;
-    .center-align;
-    .center-justify;
+.hide-mobile {
+    @media all and ( max-width: 600px) {
+        display: none;
+    }
 }
