--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,8 @@
 /* COLORS */
 @foreground: @black;
 @background: @white;
-@primary-color: @red;
-@accent-color: @cyan;
+@primary-color: @cyan;
+@accent-color: @yellow;
 @disabled-color: @grey;
 
 /* MIXINS */
@@ -21,7 +21,7 @@
 
 /* ELEMENTS */
 @font-family: 'Roboto';
-@font-size: 1.6rem;
+@font-size: 1.4rem;
 @font-weight: 300;
 @font-tracking: .01em;
 @line-height: 1.6;
