--- a/less/elements.less
+++ b/less/elements.less
@@ -10,68 +10,47 @@ body {
     font-size: @font-size;
     font-weight: @font-weight;
     letter-spacing: @font-tracking;
+    //word-spacing: .5rem;
     line-height: @line-height;
 }
 
-.bold () {
-    font-weight: bold;
-}
-
 a {
+    cursor: pointer;
     color: @foreground;
     text-decoration: none;
-    padding: 0 .1rem;
+    padding: 0 .2rem;
     border-radius: @border-radius;
     font-style: italic;
-    .slide-right(@clear, 2%, @blue);
+    .slide(@foreground, 0%, @background);
+    .inverse &,
+    .menu & {
+        color: @background;
+        .slide(@background, 0%, @foreground);
+    }
 }
-
-b,
-strong {
-    .bold;
-}
-
-p {
-    margin-top: 0;
-}
-
 
 li {
-  margin-bottom: 1.0rem;
+    margin-bottom: 1.0rem;
 }
 
-ul, ol {
+ul,
+ol {
     padding-left: 0;
 }
 
-ol ol,
-ol ul,
-ul ol,
-ul ul {
-  font-size: 90%;
-  margin: 1.5rem 0 1.5rem 3.0rem;
-}
-
 ol {
-  list-style: decimal inside;
-  list-style-type: upper-roman;
+    list-style: decimal inside;
+    list-style-type: upper-roman;
 }
 
 ul {
-  list-style: circle inside;
+    list-style: none;
 }
 
 hr {
-  border: 0;
-  border-top: 0.1rem solid @foreground;
-  margin: 3.0rem 0;
-}
-
-.header() {
-    font-weight: 300;
-    letter-spacing: -.1rem;
-    margin-bottom: 2.0rem;
-    margin-top: 0;
+    border: 0;
+    border-top: 0.2rem solid @foreground;
+    margin: 3.0rem 0;
 }
 
 h1 {
@@ -107,20 +86,44 @@ h5 {
 }
 
 .button {
-  display: inline;
-  border: 0.2rem solid @primary-color;
-  border-radius: @border-radius;
-  color: @primary-color;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 1.6rem;
-  font-weight: 700;
-  letter-spacing: .1rem;
-  line-height: 3.8rem;
-  padding: 0 3.0rem;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  white-space: nowrap;
-  .slide-up(@primary-color, 5%, @black);
+    display: inline;
+    border: 0.2rem solid @primary-color;
+    border-right: 0.4rem solid @primary-color;
+    border-radius: @border-radius;
+    color: @primary-color;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    line-height: 3.8rem;
+    padding: 0 3.0rem;
+    margin: 2.0rem 0;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+    .slide(@primary-color, 5%, @background);
+}
+
+svg {
+    width: 400px;
+    height: 4000px;
+}
+
+svg path {
+    fill: @foreground  !important;
+    transition: fill @transition-time;
+    .inverse & {
+        fill: @background !important;
+    }
+}
+
+.logo {
+    padding: 0rem;
+    margin-top: .32rem;
+    float: right;
+    width: 32px;
+    height: 32px;
+    background-size: 32px;
 }
