--- a/less/grid.less
+++ b/less/grid.less
@@ -1,5 +1,3 @@
-/* resets */
-
 *,
 *:before,
 *:after {
@@ -7,19 +5,21 @@
 }
 
 .clearfix:after {
+    clear: both;
     content: "";
     display: table;
-    clear: both;
 }
 
-/* actual grid */
-
 .wrapper {
+    background: @clear;
     display: flex;
     margin: 0 auto;
-    padding: @wrapper-padding;
     max-width: @wrapper-width;
-    background-color: @clear;
+    padding: @wrapper-padding;
+    .container {
+        max-width: @container-width;
+        padding-bottom: 7.5rem;
+    }
 }
 
 .container {
@@ -29,51 +29,98 @@
     width: 100%;
 }
 
-.wrapper .container {
-    padding-bottom: 7.5rem;
-    max-width: @container-width;
-}
-
-.navigation {
-    background: @clear;
+.navbar {
+    background: @background;
     display: block;
     height: 5.2rem;
     left: 0;
     max-width: 100%;
-    top: 0;
-    z-index: 100;
     position: fixed;
+    top: 0;
     width: 100%;
-}
+    z-index: 10;
+    .container {
+        max-width: 100%;
+        padding: 0 2.0rem;
+    }
+    .nav-list {
+        list-style: none;
+        margin-bottom: 0;
+        .nav-menu,
+        .nav-title {
+            background: @clear;
+            border-radius: @border-radius;
+            cursor: pointer;
+            font-size: 1.6rem;
+            font-weight: normal;
+            margin-bottom: 0;
+            padding: 0rem .4rem;
+            position: relative;
+            text-decoration: none;
+            z-index: 12;
+            //.slide(@foreground, 0%, @background);
+            &:hover {
+                svg path {
+                    fill: @primary-color !important;
+                }
+            }
+        }
+        .nav-menu {
+            float: right;
 
-@media only screen and (max-width: 1560px) {
-    .navigation {
-        background-color: @background;
+        }
+        .nav-title {
+            float: left;
+            a {
+                font-style: normal;
+                margin: auto;
+                padding: 0 .4rem;
+            }
+        }
     }
 }
 
-.navigation .container {
-    max-width: 100% !important;
-    padding: 0 2.0rem;
-}
+.menu {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    bottom: 0;
+    left: 0;
+    background: @foreground;
+    overflow-y: hidden;
+    transition: 0.5s;
+    .container {
+        height: 100%;
+        max-width: 80.0rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .row {
+        text-align: center;
+    }
 
-.navigation .navigation-list {
-    list-style: none;
-    margin-bottom: 0;
-    //border-radius: @border-radius;
-    //margin-right: 5rem
-}
+    .two-thirds {
+        .hide-width(1250px);
+    }
+    a {
+        color: @background;
+        .header;
+        .bold;
+        font-style: normal;
+        padding: 0rem .8rem;
+        font-size: 4.6rem;
+        line-height: 1.2;
 
-.navigation .navigation-item {
-    float: left;
-    margin-bottom: 0;
-    font-weight: normal;
-    padding: 0rem .4rem;
-    position: relative;
-    font-size: 1.6rem;
-    text-decoration: none;
-    border-radius: @border-radius;
-    .slide-up(@foreground, 0%, @background);
+        @media all and ( max-width: 830px) {
+            font-size: 2.8rem;
+        }
+    }
+
+    li {
+        margin-bottom: 3.09rem;
+    }
 }
 
 .row {
@@ -81,7 +128,7 @@
     flex-flow: row wrap;
     margin: @row-margin;
     margin-bottom: .8rem;
-    //border-radius: @border-radius;
+    border-radius: @border-radius;
 }
 
 .row:last-child {
@@ -100,7 +147,8 @@
             flex: 0 0 25%;
         }
         &.one-third {
-            flex: 0 0 33.33%;;
+            flex: 0 0 33.33%;
+            ;
         }
         &.half {
             width: 50%;
@@ -115,15 +163,19 @@
 }
 
 .spacer {
-    color: @background;
-    background: @background;
+    color: @clear;
+    background: @clear;
+    .hide-width(600px);
 }
 
 .footer {
     display: block;
+    width: 100%;
+    
 }
 
 .footer .container {
+    padding: @column-padding;
     max-width: 80.0rem;
     font-size: 1.0rem;
 }
