--- a/less/grid.less
+++ b/less/grid.less
@@ -58,7 +58,6 @@
             position: relative;
             text-decoration: none;
             z-index: 12;
-            //.slide(@foreground, 0%, @background);
             &:hover {
                 svg path {
                     fill: @primary-color !important;
@@ -148,16 +147,15 @@
         }
         &.one-third {
             flex: 0 0 33.33%;
-            ;
         }
         &.half {
-            width: 50%;
+            flex: 0 0 50%;
         }
         &.two-thirds {
-            width: 66.66%;
+            flex: 0 0 66.66%;
         }
         &.three-quarters {
-            width: 75%;
+            flex: 0 0 75%;
         }
     }
 }
