--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,8 @@
 /* COLORS */
 @foreground: @black;
 @background: @white;
-@primary-color: @cyan;
-@accent-color: @yellow;
+@primary-color: @red;
+@accent-color: @blue;
 @disabled-color: @grey;
 
 /* MIXINS */
@@ -20,7 +20,7 @@
 @column-padding: 1.0rem;
 
 /* ELEMENTS */
-@font-family: 'Roboto';
+@font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @font-size: 1.4rem;
 @font-weight: 300;
 @font-tracking: .01em;
