--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,6 +7,14 @@
     font-weight: 400;
 }
 
+.cleardefaults (@value: none) {
+    -webkit-appearance:     @value;
+    -moz-appearance:        @value;
+    -ms-appearance:         @value;
+    -o-appearance:          @value;
+    appearance:             @value;
+}
+
 .header() {
     font-weight: 300;
     letter-spacing: -.1rem;
