--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body {
   color: #212121;
   background: #fafafa;
   font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 300;
   letter-spacing: 0.01em;
   line-height: 1.6;
@@ -401,4 +401,60 @@ svg path {
   width: 32px;
   height: 32px;
   background-size: 32px;
+}
+input[type='email'],
+input[type='number'],
+input[type='password'],
+input[type='search'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
+input[type='color'],
+input[type='date'],
+input[type='month'],
+input[type='week'],
+input[type='datetime'],
+input[type='datetime-local'],
+input:not([type]),
+textarea,
+select {
+  background-color: transparent;
+  border: 0.2rem solid #fafafa;
+  border-bottom: 0.2rem solid #212121;
+  border-radius: 0;
+  box-shadow: none;
+  box-sizing: inherit;
+  height: 3.8rem;
+  padding: .6rem 1.0rem;
+  font-size: 1.6rem;
+  width: 100%;
+  resize: none;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #212121 50%);
+  background-position: 0 0%;
+  transition: all 0.3333s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+input[type='email']:hover,
+input[type='number']:hover,
+input[type='password']:hover,
+input[type='search']:hover,
+input[type='tel']:hover,
+input[type='text']:hover,
+input[type='url']:hover,
+input[type='color']:hover,
+input[type='date']:hover,
+input[type='month']:hover,
+input[type='week']:hover,
+input[type='datetime']:hover,
+input[type='datetime-local']:hover,
+input:not([type]):hover,
+textarea:hover,
+select:hover {
+  background-position: 0 100%;
+  color: #fafafa;
 }
